# pysortlib

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  SECURITY.md  bom.json  noxfile.py  pyproject.toml  renovate.json  requirements-dev.txt  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: main.yml  release.yml
pysortlib/: __init__.py  sorting.py  sorting_extra.py  sorting_linear.py  utils.py
src/pysortlib/: __init__.py  sorting_extra.py
tests/: test_sorting.py  test_sorting_extra.py  test_sorting_linear.py
